--- a/index.html
+++ b/index.html
@@ -183,6 +183,36 @@
         </div>
       </div>
     </div>
+    <div class="child_card">
+      <div class="card" style="width: 18rem;">
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.forbes.com%2Fsites%2Fbernardmarr%2F2023%2F06%2F15%2Fwhy-companies-are-vastly-underprepared-for-the-risks-posed-by-ai%2F&psig=AOvVaw2vUbyUGFKCnADUsz2RG6BB&ust=1694494166768000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCIj3gezgoYEDFQAAAAAdAAAAABAE" class="card-img-top" alt="...">
+        <div class="card-body">
+          <center><h5 class="card-title">Artificial Intelligence</h5></center>
+          <p class="card-text">AI developers build intelligent systems capable of performing tasks that traditionally require human intelligence. Tasks that these developers partake in include natural language processing, computer vision, machine learning, and data analysis.</p>
+          <center><a href="https://docs.google.com/forms/d/e/1FAIpQLSc67ZSiUjl14KRMoErJM-HKpPbrdN561yjb7T3g9cscoj9I_A/viewform?usp=sf_link" ><button class="button-85" role="button">Apply Here</button></a></center>
+        </div>
+      </div>
+    </div>
+    <div class="child_card">
+      <div class="card" style="width: 18rem;">
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.simplilearn.com%2Fhow-to-become-android-developer-article&psig=AOvVaw3107HDPL1Xf0tbN_0xFhHK&ust=1694493990534000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCND0_JfgoYEDFQAAAAAdAAAAABAE" class="card-img-top" alt="...">
+        <div class="card-body">
+          <center><h5 class="card-title">Android Development</h5></center>
+          <p class="card-text">Developing android projects plays a vital role in the life of an android developer because android development projects, ranging from beginner to advanced level, are not only the best but also the easiest way to learn android. All you need to develop an Android application is the basic know-how and an understanding of the languages Java and Kotlin.</p>
+          <center><a href="https://docs.google.com/forms/d/e/1FAIpQLSc67ZSiUjl14KRMoErJM-HKpPbrdN561yjb7T3g9cscoj9I_A/viewform?usp=sf_link" ><button class="button-85" role="button">Apply Here</button></a></center>
+        </div>
+      </div>
+    </div>
+    <div class="child_card">
+      <div class="card" style="width: 18rem;">
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Finfouna.com%2Fblog%2Fcreative-content-writing%2F&psig=AOvVaw32l7nj2iRAWAbuMmnsyo9W&ust=1694493874425000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCKCqxeDfoYEDFQAAAAAdAAAAABAE" class="card-img-top" alt="...">
+        <div class="card-body">
+          <center><h5 class="card-title">Content Writting</h5></center>
+          <p class="card-text">Content writing is the process of creating and publishing written content for a variety of purposes, including marketing, education, and entertainment. Content writers must be able to research topics, write in a clear and concise style, and edit their work for grammar and spelling errors.</p>
+          <center><a href="https://docs.google.com/forms/d/e/1FAIpQLSc67ZSiUjl14KRMoErJM-HKpPbrdN561yjb7T3g9cscoj9I_A/viewform?usp=sf_link" ><button class="button-85" role="button">Apply Here</button></a></center>
+        </div>
+      </div>
+    </div>
     </div>
    </section>
 <section>
@@ -265,6 +295,8 @@
             <div class="social">
             <a href="https://t.me/dry_code_official"><i class='bx bxl-telegram'></i></a>
             <a href="https://www.linkedin.com/company/drycode-internships/"><i class='bx bxl-linkedin'></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100089602155054"><i class="bx bxl-facebook"></i></a>
+            <a href="https://www.instagram.com/drycode_internships/"><i class="bx bxl-instagram"></i></a>
         </div>
         </div>
        </div>
